--- a/frontend/src/app/projects/projects.component.css
+++ b/frontend/src/app/projects/projects.component.css
@@ -1,51 +1,56 @@
-.projects {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
+.container {
+  margin: auto;
+  width: 100%;
 }
-.projects li {
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
-  border-radius: 4px;
-}
-.projects li:hover {
-  color: #2c3a41;
-  background-color: #e6e6e6;
-  left: .1em;
-}
-.projects li.selected {
-  background-color: black;
-  color: white;
-}
-.projects li.selected:hover {
-  background-color: #505050;
-  color: white;
-}
-.projects li.selected:active {
-  background-color: black;
-  color: white;
-}
-.projects .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color:#405061;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
+
+#modal_button {
+  margin: 0;
+  margin-top: 5vh;
+  position: absolute;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 input {
-  padding: .5rem;
+  text-align: center;
+}
+
+.delete_button {
+  margin-left: 5vw;
+}
+
+.edit_button {
+  margin-left: 1vw;
+}
+
+table {
+  border-collapse: collapse;
+  border: 3px solid black;
+}
+
+h1 {
+  text-align: center;
+}
+
+th {
+  padding: 10px;
+  border: 1px solid black;
+  text-align: center;
+}
+
+td {
+  padding: 8px;
+  border: 1px solid black;
+  text-align: center;
+  max-width: 12vw;
+}
+
+.btn {
+  margin: 0.2vw;
+}
+
+.input_icons {
+  display: block;
+  max-width: min-content;
 }
