--- a/frontend/src/app/projects/projects.component.css
+++ b/frontend/src/app/projects/projects.component.css
@@ -1,6 +1,7 @@
 .container {
-  margin: auto;
   width: 100%;
+  display: flexbox;
+  justify-content: center;
 }
 
 #modal_button {
@@ -10,6 +11,9 @@
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 
 input {
@@ -25,8 +29,10 @@ input {
 }
 
 table {
+  width: 100%;
   border-collapse: collapse;
   border: 3px solid black;
+  text-align: center;
 }
 
 h1 {
@@ -43,7 +49,6 @@ td {
   padding: 8px;
   border: 1px solid black;
   text-align: center;
-  max-width: 12vw;
 }
 
 .btn {
@@ -53,4 +58,12 @@ td {
 .input_icons {
   display: block;
   max-width: min-content;
+}
+
+::ng-deep .cdk-overlay-container {
+  z-index: 1200 !important;
+}
+
+.validate_name {
+  display: none !important;
 }
